--- a/dubbo-service/pom.xml
+++ b/dubbo-service/pom.xml
@@ -41,15 +41,15 @@
         </dependency>
         <!--Dubbo start -->
         <dependency>
-            <groupId>com.alibaba.spring.boot</groupId>
+            <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>2.0.0</version>
+            <version>2.7.5</version>
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba</groupId>
+            <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-registry-nacos</artifactId>
-            <version>0.0.1</version>
+            <version>2.7.5</version>
         </dependency>
 
         <!--interface-->
